src/test/resources/annotator/UnresolvedTypeReference_Service.proto
syntax = "proto3";

package annotator;

service Service {
    rpc call (<error descr="Unresolved reference">Unresolved1</error>) returns (<error descr="Unresolved reference">Unresolved2</error>);
}